overflow x fixed

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     width: 90vw;
     height: 80vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 main{
